# multijet-jec-fit

./: .gitignore  CMakeLists.txt  README.md  env.sh
config/: plot_config.yaml
include/: FitBase.hpp  HistMorph.hpp  JetCorrConstraint.hpp  JetCorrDefinitions.hpp  Morphing.hpp  Multijet.hpp  MultijetBinnedSum.hpp  MultijetCrawlingBins.hpp  NewPhotonJet.hpp  Nuisances.hpp  PhotonJet.hpp  PhotonJetBinnedSum.hpp  PhotonJetRun1.hpp  PythonWrapping.hpp  Rebin.hpp  ZJet.hpp  ZJetRun1.hpp
prog/: CMakeLists.txt  fit.cpp
python/: config.py  jecfit.py  utils.py
src/: CMakeLists.txt  FitBase.cpp  HistMorph.cpp  JetCorrConstraint.cpp  JetCorrDefinitions.cpp  Morphing.cpp  Multijet.cpp  MultijetBinnedSum.cpp  MultijetCrawlingBins.cpp  NewPhotonJet.cpp  Nuisances.cpp  PhotonJet.cpp  PhotonJetBinnedSum.cpp  PhotonJetRun1.cpp  PythonWrapping.cpp  Rebin.cpp  ZJet.cpp  ZJetRun1.cpp
tests/: CMakeLists.txt  test_lossFunc.cpp  test_rebin.cpp
